# modern-yolonas

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci.yml  docs.yml
configs/: detect.yaml  train.yaml
docs/: architecture.md  cli.md  getting-started.md  index.md
docs/api/: data.md  detector.md  model.md  training.md  weights.md
docs/guides/: export.md  extending.md  training.md
examples/: export_onnx.py  train_custom_dataset.py
src/modern_yolonas/: __init__.py  _version.py  hub.py  model.py  validation.py  weights.py
src/modern_yolonas/cli/: __init__.py  benchmark_cmd.py  config.py  demo_cmd.py  detect_cmd.py  eval_cmd.py  export_cmd.py  serve_cmd.py  train_cmd.py
src/modern_yolonas/data/: base.py  coco.py  transforms.py  yolo.py
src/modern_yolonas/inference/: detect.py  postprocess.py  preprocess.py  visualize.py
src/modern_yolonas/neck/: pan.py
src/modern_yolonas/nn/: repvgg.py
src/modern_yolonas/serve/: app.py
src/modern_yolonas/training/: __init__.py  callbacks.py  loss.py  metrics.py  trainer.py
tests/: test_cli.py  test_datasets.py  test_inference.py  test_loss.py  test_training.py  test_viz_and_nn.py  test_weights.py
